* CSRF removed.  The worst thing a CSRF attack would ever do is submit a POST to the add event API. * no more sessions in bookmarklet

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page1.html
@@ -2,7 +2,7 @@
 {% load oafilters %}
 {% block content %}
 
-<form id="event" action="/api/post/" method="post" class="form-horizontal">{% csrf_token %}
+<form id="event" action="/api/post/{{key}}/" method="post" class="form-horizontal">
 
   {{ bookmarklet.non_field_errors }}
   {{ bookmarklet.accessed }}
